[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "sqlalchemy-boilerplate"
version = "0.1.2"
description = "Minimal SQLAlchemy boilerplate"
authors = ["Marco Marzetti <marco@lamehost.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqlalchemy_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.7"
asyncpg = "^0.29.0"
aiosqlite = "^0.18.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pylint = "^2.17.0"
bandit = "^1.7.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
