[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "sqlalchemy-boilerplate"
version = "0.1.2"
description = "Minimal SQLAlchemy boilerplate"
authors = ["Marco Marzetti <marco@lamehost.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqlalchemy_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.7"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest-cov = "^6.2.1"
pylint = "^3.3.7"
bandit = "^1.7.9"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
